<resources>
    <string name="app_name">Hospital Management System</string>
    <string name="healthcareheading">HealthCare</string>
    <string name="loginheading">Login</string>
    <string name="usernameinput">Username</string>
    <string name="passwordinput">Password</string>
    <string name="already_have_an_account_signup">Already have an account?Login</string>
    <string name="loginbuttontext">login</string>
    <string name="signupheading">Signup</string>
    <string name="usernameSignup">Username</string>
    <string name="passwordSignup">Password</string>
    <string name="signupButtonText">Signup</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lab_test">Lab Test</string>
    <string name="buy_medicine">Buy Medicine</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="health_article">Health Article</string>
    <string name="order_details">Order details</string>
    <string name="log_out">Log Out</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="general_physician">General Physician</string>
    <string name="dentist">Dentist</string>
    <string name="dietician">Dietician</string>
    <string name="surgeon">Surgeon</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="psychiatrist">Psychiatrist</string>
    <string name="back_to_home">Back to Home</string>
    <string name="back">Back</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="blood_test">Blood Test</string>
    <string name="xray">XRay</string>
    <string name="diabetes_test">Diabetes Test</string>
    <string name="cbc">CBC</string>
    <string name="urine_routine_test">Urine Routine Test</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="lab_test_booking">Lab Test Booking</string>
    <string name="health_article_heading">Health Article</string>
    <string name="loading">Loading...</string>
    <string name="place_order">Place Order</string>
    <string name="panadol">Panadol</string>
    <string name="rs_50">Rs. 50</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_medicines">Buy Medicines</string>
    <string name="medicine_image">Medicine Image</string>
    <string name="place_your_order">Place your order</string>
    <string name="decreaseBtn">-</string>
    <string name="increaseBtn">+</string>
    <string name="delete_item">Delete item</string>
    <string name="confirm_your_order">Confirm Your Order</string>
    <string name="total_rs_0">Total: Rs. 0</string>
    <string name="enter_delivery_address">Enter delivery address</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="backBtn">← Back</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_rs_0_incl_delivery">Total: Rs. 0 (Incl. Delivery)</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="rs_200_x_2">Rs. 200 x 2</string>
    <string name="name_sam">Name: Sam</string>
    <string name="contact_0300_1234567">Contact: 0300-1234567</string>
    <string name="address_texas_america">Address: Texas, America</string>
    <string name="total_rs_1500_incl_delivery">Total: Rs. 1500 (Incl. Delivery)</string>
    <string name="delivery_within_24_hours">Delivery within 24 hours</string>
    <string name="download_slip">Download Slip</string>
    <string name="order_slip">Order Slip</string>
    <string name="wellness_at_your_fingertips">Wellness at Your Fingertips.</string>
</resources>