<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/backOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/rounded_border_bg"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:layout_marginTop="6dp"/>

        <EditText
            android:id="@+id/etContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            android:drawableStart="@android:drawable/ic_menu_call"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_marginTop="6dp"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/delivery_address"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:layout_marginTop="6dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/headingGrey"
        android:layout_marginBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderSummaryRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_rs_0_incl_delivery"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:textColor="@color/black"
        android:background="#CC757373"/>

    <Button
        android:id="@+id/btnConfirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_your_order"
        android:textAllCaps="false"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
