<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@android:color/white"
    android:layout_marginBottom="6dp"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/medicine_image"
        android:src="@drawable/default_medicine"
        android:background="@drawable/rounded_border_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/itemPriceQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs_200_x_2"
            android:textSize="14sp"
            android:textColor="@color/secondHeadingGrey"/>
    </LinearLayout>
</LinearLayout>
