<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="6dp"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/medicineImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/panadol_tab"/>

        <TextView
            android:id="@+id/medicineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/medicineImage"
            android:layout_marginStart="12dp"
            android:text="@string/panadol"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/medicinePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medicineName"
            android:layout_toEndOf="@id/medicineImage"
            android:layout_marginStart="12dp"
            android:text="@string/rs_50"
            android:textSize="16sp"
            android:textColor="@color/headingGrey"/>

        <Button
            android:id="@+id/addToCartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/white"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
